--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
 		<section>
 			<h3>Welcome to Our Company</h3>
 			<div class="paragraph-company">
-			<p>That sounds like a great idea! Starting an online business can be a daunting task, but with the right guidance and resources, it's possible to build a successful enterprise. At our online business, we aim to make the process easier for aspiring entrepreneurs by offering a range of essential components that they need to get their businesses up and running.</p>
+			<p>That sounds like a great idea! Starting an online business can be a daunting task, but with the right guidance and resources, it's possible to build a successful enterprise. At our company, we aim to make the process easier for aspiring entrepreneurs by offering a range of essential components that they need to get their businesses up and running.</p>
 
-				<p>Our team of experts has years of experience in online business, and we know what it takes to create a successful online venture.</p>
-				<p> We provide a variety of services and our goal is to help people turn their ideas into reality, and we provide the tools and guidance to make it happen.</p>
+				<p>Our team of experts has years of experience in building online businesses, and we know what it takes to create a successful online venture.</p>
+				<p> We provide a variety of technical services and our goal is to help people turn their ideas into reality, and we provide the tools and guidance to make it happen.</p>
 				
 				<p>Whether you're just starting out or looking to take your existing business to the next level, we have everything you need to succeed.</p>
 				<p> Our services are affordable and customizable, so you can choose the options that best suit your needs and budget.</p>
 				<p> With our help, you can build a professional online business that will stand the test of time and bring you success for years to come.</p>
 			</div>
-			</section>
-
-		<section>
-			<div class="image-container">
-				<img src="goodphoto.jpg" alt="Background">
-			</div>
 		</section>
-		
+
+			<div class="card">
+				<img src="cpp.jpg" alt="Background">
+				<div class="card-overlay">
+					<h3>Motivational Tip</h3>
+					<p>Remember that every small step you take towards your goal counts, and with perseverance and dedication, you can achieve success.</p>
+				  </div>
+			</div>
         
 	</main>
 	
